<resources>
    <string name="app_name">Campus UQ</string>
    <string name="action_settings">Configuración</string>
    <string name="initial_screen">Inicio</string>
    <string name="write_here">Escriba Aquí</string>
    <string name="title_fragment_directory">DIRECTORIO</string>
    <string name="welcome_message">La Universidad del Quindio en camino a la
        acreditación institucional realizó esta aplicación para ser de gran
        ayuda a la comunidad  universitaria</string>
    <string name="direction_text">Carrera 15 Calle 12 Norte Armenia, Quindío.</string>
    <string name="title_detail_new">Title</string>
    <string name="without_conexion">Sin Conexión a Internet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="review_wel_mensaje">Ayudanos a mejorar nuestra App. Regalame tu sugerencia y te prometemos atenderla</string>
    <string name="text_year">Año</string>
    <string name="texto_detalle_de_pelicula">Al ver que la vida en la
    Tierra está llegando a su fin, un grupo de exploradores decide
    embarcarse en la que puede ser la misión más importante de la historia
    de la humanidad y emprender un viaje más allá de nuestra galaxia en el
    que descubrirán si las estrellas pueden albergar el futuro de la raza
    humana...</string>


    <string name="menu_item_share">Compartir</string>
    <string name="menu_item_send">Enviar</string>
    <string name="menu_item_news">Noticias</string>
    <string name="menu_item_directory">Directorio</string>
    <string name="menu_item_reviews">Sugerencias</string>
    <string name="menu_item_page">Ir a la pagina Web</string>
    <string name="menu_item_language">Change Language</string>

    <string name="review_message">Gracias por la sugerencia, la atenderemos rapidamente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_facebook">Facebook</string>
    <string name="menu_item_google">Google</string>
    <string name="menu_item_twitter">Twitter</string>

    <string name="facebook_app_id">1728212554102016</string>
    <string name="realizar_tuit">Tweet</string>

</resources>
